###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
# MODULE.bazel
module(name = "mo")

cc_common = use_extension("@bazel_tools//tools/cpp:cc_toolchain_config_lib.bzl", "cc_common")

cc_common.flag_set(
    name = "cpp_standard",
    flags = ["-std=c++23"],
    actions = ["c++-compile"],
)

bazel_dep(name = "googletest", version = "1.16.0")
